<resources>
    <string name="app_name">NNG-PR07-Fragmentos</string>
    <string name="avatar_label">Select Avatar</string>
    <string name="main_invalid_data">Invalid data</string>
    <string name="main_save">Save</string>
    <string name="main_saved_succesfully">Student saved successfully</string>
    <string name="main_error_saving">Error saving student</string>
    <string name="avatar_select">Select</string>
    <string name="imgAvatar_description">A picture of an adorable cat</string>
    <string name="main_lblName">Name</string>
    <string name="main_txtName_hint">(name)</string>
    <string name="main_txtEmail">email</string>
    <string name="main_lblPhonenumber">Phone number</string>
    <string name="main_txtPhonenumber_hint">(phone)</string>
    <string name="main_txtEmail_hint">(email)</string>
    <string name="imgPhonenumber_description">Phone icon</string>
    <string name="imgEmail_description">Email icon</string>
    <string name="main_lblAddress">Address</string>
    <string name="main_txtWeb">(url)</string>
    <string name="main_lblWeb">Web</string>
    <string name="main_txtAddress_hint">(address)</string>
    <string name="imgAddress_description">Address icon</string>
    <string name="imageWeb_description">Web icon</string>
    <string name="main_lblAvatar_defaultName">Tom</string>
    <string name="avatar_DefaultCatName">TextView</string>
    <string name="profileImgRatio">16:9</string>
    <string name="userlist_lblEmptyView">Add user</string>
    <string name="userListItem_examplePhone">666666666</string>
    <string name="userListItem_emailExample">email@ejemplo.inv</string>
    <string name="userListItem_nameExample">Nombre de ejemplo</string>
    <string name="userListItem_btnEdit">Edit</string>
    <string name="userListItem_btnDelete">Delete</string>
    <string name="list_title">User list</string>
    <string name="profile_title">Profile</string>
    <string name="avatar_title">Avatar</string>
</resources>
