<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_profile_margin_Start"
            android:layout_marginTop="@dimen/standardMargin"
            android:labelFor="@+id/txtName"
            android:text="@string/main_lblName"
            android:textColor="@color/color_state_selector"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standardMargin"
            android:hint="@string/main_txtName_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lblName"
            app:layout_constraintTop_toBottomOf="@+id/lblName"
            android:importantForAutofill="no">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standardMargin"
            android:text="@string/main_txtEmail"
            android:textColor="@color/color_state_selector"
            app:layout_constraintStart_toStartOf="@+id/txtName"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standardMargin"
            android:hint="@string/main_txtEmail_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toStartOf="@+id/imgEmail"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/lblEmail"
            app:layout_constraintTop_toBottomOf="@+id/lblEmail"

            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/lblPhonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standardMargin"
            android:text="@string/main_lblPhonenumber"
            android:textColor="@color/color_state_selector"
            app:layout_constraintStart_toStartOf="@+id/txtPhonenumber"
            app:layout_constraintTop_toBottomOf="@+id/txtName" />

        <ImageView
            android:id="@+id/imgPhonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standardMargin"
            android:layout_marginBottom="@dimen/standardMargin"
            android:contentDescription="@string/imgPhonenumber_description"
            android:tint="@color/color_state_selector"
            app:layout_constraintBottom_toBottomOf="@+id/txtPhonenumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtPhonenumber"
            app:srcCompat="@drawable/ic_call_24dp" />

        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standardMargin"
            android:contentDescription="@string/imgEmail_description"
            android:tint="@color/color_state_selector"
            app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
            app:layout_constraintEnd_toStartOf="@+id/txtPhonenumber"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtEmail"
            app:srcCompat="@drawable/ic_email_24dp" />

        <EditText
            android:id="@+id/txtPhonenumber"
            android:layout_width="@dimen/lblPhone_fixedWidth"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standardMargin"
            android:layout_marginEnd="@dimen/standardMargin"
            android:ems="@integer/txtphoneWidth"
            android:hint="@string/main_txtPhonenumber_hint"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:minEms="@integer/txtphoneWidth"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtEmail"
            app:layout_constraintEnd_toStartOf="@+id/imgPhonenumber"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imgEmail"
            android:importantForAutofill="no" />


        <TextView
            android:id="@+id/lblAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standardMargin"
            android:text="@string/main_lblAddress"
            android:textColor="@color/color_state_selector"
            app:layout_constraintStart_toStartOf="@+id/txtEmail"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

        <EditText
            android:id="@+id/txtAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standardMargin"
            android:ems="10"
            android:hint="@string/main_txtAddress_hint"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@+id/imgAddress"
            app:layout_constraintStart_toStartOf="@+id/lblAddress"
            app:layout_constraintTop_toBottomOf="@+id/lblAddress"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/lblWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standardMargin"
            android:text="@string/main_lblWeb"
            android:textColor="@color/color_state_selector"
            app:layout_constraintStart_toStartOf="@+id/txtAddress"
            app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

        <EditText
            android:id="@+id/txtWeb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standardMargin"
            android:ems="10"
            android:hint="@string/main_txtWeb"
            android:inputType="textUri"
            app:layout_constraintEnd_toStartOf="@+id/imgWeb"
            app:layout_constraintStart_toStartOf="@+id/lblWeb"
            app:layout_constraintTop_toBottomOf="@+id/lblWeb"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/imgAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standardMargin"
            android:layout_marginBottom="@dimen/standardMargin"
            android:contentDescription="@string/imgAddress_description"
            android:tint="@color/color_state_selector"
            app:layout_constraintBottom_toBottomOf="@+id/txtAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_map_24dp" />

        <ImageView
            android:id="@+id/imgWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standardMargin"
            android:layout_marginBottom="@dimen/standardMargin"
            android:contentDescription="@string/imageWeb_description"
            android:tint="@color/color_state_selector"
            app:layout_constraintBottom_toBottomOf="@+id/txtWeb"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_web_24dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
