<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileActivity">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/imgAvatar_description"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="@string/profileImgRatio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cat1" />

        <TextView
            android:id="@+id/lblAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standardMargin"
            android:layout_marginBottom="@dimen/standardMargin"
            android:background="@color/colorBlack"
            android:backgroundTint="@color/colorBlack"
            android:padding="@dimen/standardMargin"
            android:text="@string/main_lblAvatar_defaultName"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imgAvatar"
            app:layout_constraintEnd_toEndOf="parent" />

        <include
            android:id="@+id/includeProfile"
            layout="@layout/fragment_main_profile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
